--- a/taski/app/views/layouts/application.html.erb
+++ b/taski/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
 
   <body>
 
-  	<% link_to "Home", root_path %>
-  	<% link_to "About", about_path %>
-  	<% link_to "Contact", contact_path %>
-  	<% link_to "Blog", blog_path %>
-  	<% link_to "Projects", projects_path %>
+  <%= image_tag("logos/turtles.jpg", width: '300px') %>
+
+    <%= render "shared/nav" %>
+
+  	
     <%= yield %>
   </body>
 </html>
