--- a/taski/app/views/pages/home.html.erb
+++ b/taski/app/views/pages/home.html.erb
@@ -1,9 +1,7 @@
 <h1>Home Page</h1>
 
+<div class="homepage-projects">
+	<%= render "shared/projects" %>
+</div>
 
-<% @projects.each do |project| %>
 
-<p><strong><%= project.title %></strong></p>
-
-
-<% end %>
